scooch/css/toggle.data.css
body {
  padding: 2px;
  background-color: white;
}

#data-show {
  width: 800px;
  height: 800px;
  background-color: white;
  padding-left: 15px;
  padding-top: 5px;
  overflow: auto;
  white-space: nowrap;
  font-family: 'liberation mono', monospace;
  outline: none;
}

#control_data-bar {
  font-family: arial;
  font-size: 10px;
  padding-left: 15px;
}

#control_data-bar .controls {
  margin-right: 1px;
  color: blue;
  float: left;
}

#control_data-bar .data {
  margin-right: 5px;
  color: grey;
  float: left;
}

.clear {
  clear: both;
}

#language_menu_container {
  display: none;
  position: absolute;
  top: 25px;
  left:25px;
}

#language_menu {
  min-width: 120px;
  min-height: 445px;
  outline: none;
}

#translating {
  color: #f47835;
  display: none;
  margin-left: 10px;
}
/*#data-bar {
    font-family: arial;
    font-size: 4px;
    padding-left: 15px;
}

#data-bar-version {
    color: #8b008b;
    float: left;
}

#data-bar-error {
    color: red;
    display: none;
    margin-left: 15px;
    padding-left: 15px;
}

#instructions{
    font: monospace;
    font-size: 10px;
    color: gray;
    padding-left: 15px;
}*/

